# hairline-defense-force

./: CMakeLists.txt  README.md
docs/: risk_controller_development.md  risk_controller_optimization.md  task_breakdown.md
include/: risk_controller.h  types.h
src/: risk_controller.cpp
tests/: risk_test.cpp  risk_test_main.cpp
